# mcp-engine

./: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: go-checks.yaml  pull-request-checks.yml
docs/: api.md  index.md
examples/clients/simple-chatbot/: README.MD  pyproject.toml
examples/clients/simple-chatbot/mcp_simple_chatbot/: main.py
examples/fastmcp/: complex_inputs.py  desktop.py  echo.py  memory.py  parameter_descriptions.py  readme-quickstart.py  screenshot.py  simple_echo.py  text_me.py  unicode_example.py
examples/mcpengine/: complex_inputs.py  desktop.py  echo.py  memory.py  parameter_descriptions.py  readme-quickstart.py  screenshot.py  simple_echo.py  text_me.py  unicode_example.py
examples/servers/: docker-compose.yml
examples/servers/lambda-weather/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
examples/servers/lambda-weather/terraform/: main.tf  outputs.tf  variables.tf
examples/servers/lambda-weather/weather/: __init__.py  __main__.py  server.py
examples/servers/simple-prompt/: README.md  pyproject.toml
examples/servers/simple-prompt/mcp_simple_prompt/: server.py
examples/servers/simple-resource/: README.md  pyproject.toml
examples/servers/simple-resource/mcp_simple_resource/: server.py
examples/servers/simple-tool/: README.md
examples/servers/simple-tool/mcp_simple_tool/: server.py
examples/servers/smack/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  realm-export.json
examples/servers/smack/h2/: keycloakdb.mv.db  keycloakdb.trace.db
examples/servers/smack/mcp_smack/: __init__.py  __main__.py  postgresDB.py  server.py
examples/servers/smack/mcp_smack/db/: __init__.py  postgres.py
examples/servers/smack/terraform/: db.tf  ecr.tf  lambda.tf  outputs.tf  variables.tf
examples/smack/: Dockerfile  README.md  db.py  docker-compose.yml  main.py  postgresDB.py  pyproject.toml  requirements.txt  server.py  web_server.py
examples/smack/mcp_smack/: postgresDB.py  server.py
mcpengine-proxy/: .dockerignore  Dockerfile  README.md  auth.go  auth_test.go  docker-compose.yml  go.mod  go.sum  http_test.go  io_test.go  mcpengine.go  mcpengine_integration_test.go  run-docker.sh  sse_test.go  utils_test.go
mcpengine-proxy/cmd/: main.go
mcpengine-proxy/testutil/: reader.go
src/mcp/: types.py
src/mcp/cli/: claude.py  cli.py
src/mcp/proxy/: Makefile  go.mod  main.go  run_integration_tests.sh
src/mcp/proxy/cmd/: debug_client.go
src/mcp/proxy/integration/: integration_test.go
src/mcp/proxy/proxy/: proxy.go  (+1 more)
src/mcp/server/: __init__.py  sse.py
src/mcp/shared/: context.py
src/mcpengine/cli/: claude.py  cli.py  server.py
src/mcpengine/client/: __main__.py  session.py
src/mcpengine/server/: http.py  session.py  settings.py  sse.py
src/mcpengine/shared/: context.py
tests/: test_examples.py
tests/cli/: test_server_config.py
tests/client/: test_config.py  test_list_roots_callback.py  test_logging_callback.py  test_sampling_callback.py  test_session.py  test_stdio.py
tests/issues/: test_100_tool_listing.py  test_129_resource_templates.py  test_141_resource_templates.py  test_152_resource_mime_type.py  test_176_progress_token.py  test_188_concurrency.py  test_192_request_id.py  test_342_base64_encoding.py  test_355_type_error.py  test_88_random_error.py
tests/server/: test_lifespan.py  test_read_resource.py  test_session.py  test_stdio.py
tests/server/auth/: test_errors.py  test_return_code.py
tests/server/fastmcp/: test_func_metadata.py  test_parameter_descriptions.py  test_server.py  test_tool_manager.py
tests/server/mcpengine/: test_func_metadata.py  test_parameter_descriptions.py  test_server.py  test_tool_manager.py
tests/shared/: test_http.py  test_memory.py  test_session.py  test_sse.py  test_ws.py
(+73 files in other folders)
