[project]
name = "lambda-weather"
version = "0.1.0"
description = "A simple MCP server exposing a weather tool, to be hosted on Lambda"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Featureform, Inc." }]
maintainers = [
    { name = "Simba Khadder", email = "simba@featureform.com" },
    { name = "Kamal Sadek", email = "kamal@featureform.com" },
    { name = "Erik Eppel", email = "erik@featureform.com" },
    { name = "Riddhi Bagadiaa", email = "riddhi@featureform.com" },
]
keywords = ["mcp", "llm", "automation", "web", "fetch"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "mcpengine[lambda]>=0.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
weather = "weather.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lambda-weather"]

[tool.pyright]
include = ["weather"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
