[project]
name = "mcp-smack"
version = "0.1.0"
description = "SMACK application"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.6.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "python-dotenv==1.1.0",
    "uvicorn==0.34.0",
    "httpx-sse==0.4.0",
    "sse-starlette==2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_smack"]

[tool.ruff]
# Enable autofix for all rules
fix = true
# Set line length to 88 (same as Black)
line-length = 88
# Select rules to enable
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
# Ignore specific rules
ignore = []
# Exclude files and directories
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "venv",
    "env",
    ".env",
]

# Sort imports
[tool.ruff.isort]
known-first-party = ["smack"]

# Format code
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
